--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,7 @@ body {
     /* min-height: 10vh; */
     padding: 1em 2em;
     background-color: aquamarine;
-    display: flex;
+    display: grid;
     justify-content: center;
     align-items: center;
 }
@@ -40,12 +40,37 @@ body {
 }
 
 .header-content .img-div {
+    max-width: 80vw;
     margin: 0 auto;
-    max-width: 80vw;    
+    display: block;
+    justify-content: center;
+    align-items: center;
 }
 
 #image {
-    max-width: 100%;
+    max-width: 60%;
+    display: block;
+    margin-right: auto;
+    margin-left: auto;
+    transition: .3s;
+}
+
+@media (max-width: 720px) 
+{
+    #image {
+        max-width: 80%;
+    }
+}
+
+@media (max-width: 425px) 
+{
+    #image {
+        max-width: 100%;
+    }
+}
+
+#image:hover {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .img-caption{
@@ -54,15 +79,12 @@ body {
     align-items: center;
     font-style: italic;
     font-size: .8rem;
+    padding-top: 1em;
 }
 
 .main-content {
     margin: 0 auto;
     max-width: 80vw;
-    display: grid;
-    justify-content: center;
-    align-items: center;
-    grid-template-columns: 100%;
 }
 
 .main-content .tribute-info {
@@ -70,11 +92,17 @@ body {
     columns: 2;
 }
 
-a{
-    text-decoration: none;
+.main-content a{
     color: currentColor;
+    text-decoration: none;
+    max-width: 100px;
+    border: 1px black solid;
+    border-radius: 50px;
+    padding: .2rem 2rem;
+    box-shadow: 0 2px 8px 2px rgba(0, 0, 0, 0.2);
+    transition: 0.3s;
 }
 
-a:hover{
-    font-size: 1.2rem;
+.main-content a:hover{
+    font-size: 1.1rem;
 }
