--- a/styles.css
+++ b/styles.css
@@ -26,16 +26,25 @@ body {
     display: grid;
     justify-content: center;
     align-items: center;
+    border: 1px black solid;
 }
 
 .header-content .title-block #title {
+    
     font-size: 2rem;
     font-weight: 500;
-    padding: 1em;
+    /* padding: 1em 2em; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .header-content .title-block .subtitle {
     font-size: 1.3rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
 }
 
 .header-content #img-div {
@@ -73,6 +82,7 @@ body {
 .main-content {
     margin: 0 auto;
     text-align: justify;
+    border: 1px black solid;
 }
 
 .main-content #tribute-info {
@@ -80,14 +90,14 @@ body {
     columns: 2;
 }
 
+.main-content .link-to-see-more {
+    padding: 0rem 2rem 2rem 2rem;
+}
+
 .main-content #tribute-link {
-    color: currentColor;
     text-decoration: none;
-    max-width: 100px;
-    border: 1px black solid;
-    border-radius: 50px;
-    padding: .2rem 2rem;
-    box-shadow: 0 2px 8px 2px rgba(0, 0, 0, 0.2);
+    color: currentColor;
+    font-weight: 700;
     transition: 0.3s;
 }
 
