--- a/styles.css
+++ b/styles.css
@@ -33,7 +33,6 @@ body {
     
     font-size: 2rem;
     font-weight: 500;
-    /* padding: 1em 2em; */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -53,6 +52,7 @@ body {
     justify-content: center;
     align-items: center;
     max-width: 100%;
+    padding-top: .5em;
 }
 
 #image {
@@ -65,8 +65,8 @@ body {
 }
 
 
-
 #image:hover {
+    max-height: 405px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
@@ -76,7 +76,7 @@ body {
     align-items: center;
     font-style: italic;
     font-size: .8rem;
-    padding-top: 1em;
+    padding: .5rem 2rem 2rem 2rem;
 }
 
 .main-content {
